--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,14 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: homestead
-  password: secret
+  username: <%= ENV.fetch("MYSQL_USER") %>
+  password: <%= ENV.fetch("MYSQL_PASSWORD") %>
+  host: <%= ENV.fetch("MYSQL_HOST") %>
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: chat_app_development_2
+  database: <%= ENV.fetch("MYSQL_DATABASE") %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
